--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -59,3 +59,35 @@
         }
     }
 }
+@media screen and (max-width: 576px){
+    .footer
+        .sectionContainer{
+            padding: 50px 0 0;
+        }
+            .footerContent{
+                .footerInfo{
+                    display: block;
+                    .fooerLogo{
+                        width: 90%;
+                        padding-bottom: 20px;
+                        margin: auto;
+                    }
+                    .footerSocial{
+                        justify-content: center;
+                    }
+                }
+                .contactInfo{
+                    .footerAboutIssue{
+                        padding-bottom: 40px;
+                        li{
+                            padding-bottom: 10px;
+                            font-size: 16px;
+                            
+                        }
+                    }
+                }
+                
+
+                
+    }
+}
