--- a/scss/_aboutUs.scss
+++ b/scss/_aboutUs.scss
@@ -1,3 +1,4 @@
+// AboutUs
 .about{
     h2{
         font-size: 36px;
@@ -32,24 +33,58 @@
         }
         .aboutTxt{
             width: 50%;
-            background-image: url(https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/04-about/bg-about.png?raw=true);
+            background-image: url(../material/01-PC/04-about/bg-about.png);
             display: flex;
             flex-direction: column;
             justify-content: center;
             h3,h4,p{
-                width: 90%;
+                width: 100%;
                 text-align: center;
-                padding: 10px;
+                padding: 10px 50px;
                 background-color: $txt-backgorund-color;
             }
             h3{
                 font-size: 22px;
+                padding-top: 30px;
             }
             h4{
-               font-size: 16px; 
+               font-size: 14px; 
             }
             p{
-                font-size: 14px;
+                font-size: 12px;
+                padding-bottom: 30px;
+            }
+        }
+    }
+}
+@media screen and (max-width: 769px){
+    .about{
+        h2{
+            padding: 25px 0;
+        }
+        .aboutUs{
+            width: 90%;
+        }
+    }
+}
+@media screen and (max-width: 415px){
+    .about{
+        h2{
+            font-size: 26px;
+        }
+        .aboutUs{
+            li{
+                // width: 100%;
+                display: block;
+                .aboutPic{
+                    width: 100%;
+                    .numberPic{
+                        display: none;
+                    }
+                }
+                .aboutTxt{
+                    width: 100%;
+                }
             }
         }
     }
