--- a/scss/_issue.scss
+++ b/scss/_issue.scss
@@ -48,7 +48,6 @@
             height: 70%;
             top: 40%;
             left: 0;
-            // background-color: #000;
             background-image: url(../material/02-PAD/00-banner/mag_bg.png);
             background-size: cover;
             z-index: -1;
@@ -62,6 +61,19 @@
         .moreBtn:before{
             left: 0;
             border-left: 2px solid #323232;
+        }
+    }
+}
+@media screen and (max-width: 415px){
+    .issue{
+        h2{
+            font-size: 26px;
+        }
+        .issueContent{
+            .carousel{
+                width: 90%;
+                margin: 0 auto 20px;
+            }
         }
     }
 }
