--- a/scss/_sales.scss
+++ b/scss/_sales.scss
@@ -103,3 +103,27 @@
         
     }
 }
+@media screen and (max-width: 415px){
+    .sales{
+        h2{
+            font-size: 26px;
+        }
+        .salesContent{
+            .salesStory{
+                width: 100%;
+                .salesList{
+                    display: block;
+                    width: 90%;
+                    margin: 0 auto;
+                    li{
+                        width: 100%;
+                        margin-bottom: 50px;
+                    }
+                }
+            }
+            .salesList ~ .salesList{
+                display: none;
+            }
+        }
+    }
+}
