--- a/scss/_support.scss
+++ b/scss/_support.scss
@@ -2,6 +2,9 @@
     h2{
         font-size: 0;
     }
+    .mobileSupportBanner{
+        display: none;
+    }
 }
 .support{
     h2{
@@ -20,8 +23,7 @@
         margin-bottom: 50px;
     }
     p{
-        padding: 10px 0;
-        text-align: center;
+        padding: 20px 0;
     }
     .supportList{
         display: flex;
@@ -48,5 +50,49 @@
             transform: scale(1.1);
         }
         
+    }
+}
+@media screen and (max-width: 769px){
+    .support{
+        h2{
+            padding: 25px 0;
+        }
+        .supportWay{
+            width: 90%;
+        }
+    }
+}
+@media screen and (max-width: 415px){
+    .supportBanner{
+        .pcSupportBanne{
+            display: none;
+        }
+        .mobileSupportBanner{
+            display: block;
+        }
+        p{
+            padding: 20px;
+            background-color: #323232;
+            color: #fff;
+            font-size: 14px;
+        }
+        p:last-child{
+            padding-top: 0;
+        }
+    }
+    .support{
+        h2{
+            font-size: 26px;
+        }
+        p{
+            font-size: 14px;
+        }
+        .supportList{
+            display: block;
+            li{
+                width: 80%;
+                margin: 0 auto 50px;
+            }
+        }
     }
 }
