--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -1,10 +1,10 @@
 // Common
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 html,
 body {
 	line-height: 1.5;
 	scroll-behavior: smooth;
-	font-family: 'Noto Sans TC', sans-serif;
+	font-family: "Noto Sans TC", sans-serif;
 }
 h1,
 h2,
