--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -1,5 +1,5 @@
 // Common
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500&display=swap");
 html,
 body {
 	line-height: 1.5;
