--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -22,6 +22,7 @@
             li{
                 font-size: 0;
                 width: 50px;
+                color: $txt-color;
                 a{
                     display: block;
                     margin: 0 10px;
