--- a/css/BigIssueAll.css
+++ b/css/BigIssueAll.css
@@ -173,7 +173,7 @@ img {
   transform: translate(5px, 5px);
   box-shadow: 0 0 0 #fff;
   background-color: #ff8729;
-  color: #fff;
+  color: #ff8729;
 }
 
 .moreBtn a:hover:before {
