--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -152,7 +152,7 @@ img {
 		transform: translate(5px, 5px);
 		box-shadow: 0 0 0 #fff;
 		background-color: $hover-background-color;
-		color: #fff;
+		color: $hover-font-color;
 	}
 	a:hover:before {
 		width: 100%;
