--- a/css/BigIssueAll.css
+++ b/css/BigIssueAll.css
@@ -177,13 +177,13 @@ img {
 }
 
 .moreBtn a:hover:before {
-  width: 100%;
-  left: 0;
+  width: 100% !important;
+  left: 0 !important;
 }
 
 .moreBtn a:hover:after {
-  height: 100%;
-  top: 0;
+  height: 100% !important;
+  top: 0 !important;
 }
 
 .moreBtn:before {
@@ -199,7 +199,7 @@ img {
 }
 
 .moreBtn:hover:before {
-  height: 0;
+  height: 0 !important;
   transform: translate(5px, 5px);
 }
 
