--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -155,12 +155,12 @@ img {
 		color: #fff;
 	}
 	a:hover:before {
-		width: 100%;
-		left: 0;
+		width: 100% !important;
+		left: 0 !important;
 	}
 	a:hover:after {
-		height: 100%;
-		top: 0;
+		height: 100% !important;
+		top: 0 !important;
 	}
 }
 .moreBtn:before {
@@ -175,7 +175,7 @@ img {
 	transition: 0.3s;
 }
 .moreBtn:hover:before {
-	height: 0;
+	height: 0 !important;
 	transform: translate(5px, 5px);
 }
 @media screen and (max-width: 769px){
