--- a/css/BigIssueAll.css
+++ b/css/BigIssueAll.css
@@ -489,6 +489,7 @@ img {
   }
   .issue .moreBtn a {
     color: #fff;
+    background-color: transparent !important;
   }
   .issue .moreBtn:before {
     left: 0;
