--- a/scss/_issue.scss
+++ b/scss/_issue.scss
@@ -56,6 +56,7 @@
             padding: 0;
             a{
                 color: #fff;
+                background-color: transparent !important;
             }
         }
         .moreBtn:before{
