--- a/scss/_story_magazine.scss
+++ b/scss/_story_magazine.scss
@@ -285,13 +285,12 @@
                 position: absolute;
                 bottom: -20%;
                 right: 2%;
-                
                 a{
                     font-size: 14px;
-                    padding: 5px 10px;
+                    padding: 10px;
                 }
                 a:after{
-                    top: -5px;
+                    top: -8px;
                 }
             }
             .moreBtn:before{
