--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,7 +5,9 @@
     }
     .mobileDevice{
         display: none;
-        
+    }
+    a{
+        display: block;
     }
     .pcHeaderBanner{
         width: 100%;
