--- a/scss/_story_magazine.scss
+++ b/scss/_story_magazine.scss
@@ -2,6 +2,9 @@
     .headerPic{
         position: relative;
         background-color: #fff;
+        // a{
+        //     display: block;
+        // }
         .mobileHeaderPic{
             display: none;
         }
